<resources>
    <string name="app_name">Jam Player</string>
    <string name="app_id">com.seventhmoon.JamNow</string>
    <string name="video_title">JamNow Chromecast Video Stream</string>
    <string name="audio_title">JamNow Chromecast Audio Stream</string>
    <string name="video_url">xxxxx</string>
    <string name="play_video">Play Video</string>
    <string name="pause_video">Pause Video</string>
    <string name="resume_video">Resume Video</string>
    <string name="content_type_mp4">video/mp4</string>
    <string name="play_mode_all">All</string>
    <string name="play_mode_shuffle">Shuffle</string>
    <string name="play_mode_repeat">Single Repeat</string>
    <string name="play_mode_ab_loop">AB Loop</string>
    <string name="menu_add">Add</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="add_to_list">Add to play list</string>
    <string name="remove_select">Remove from list</string>
    <string name="confirm">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="remove_file_from_list">Remove \n%s \nfrom this list?　(Would not delete this file)</string>
    <string name="volume_control">Volume</string>
    <string name="clear_all">Clear all</string>
    <string name="clear_list_all">Clear all of this list? (Would not delete these file)</string>
    <string name="invalid_input">Invalid input!</string>
    <string name="range_invalid">Range is invalid</string>
    <string name="mark_a">Mark A</string>
    <string name="mark_b">Mark B</string>
    <string name="must_be_less_than_song_duration">must be less than song duration</string>
    <string name="song_list_empty">Song list is empty</string>
    <string name="list_empty">Play list is empty. Try to use \"add\" button to add songs to your list!</string>
    <string name="play_mode_video">Video</string>
    <string name="menu_link">Connect</string>
    <string name="add_local">From this device</string>
    <string name="add_remote">From remote(Samba)</string>
    <string name="remote_menu_refresh">Refresh</string>
    <string name="remote_menu_remove">Remove</string>
    <string name="remote_menu_modify">Modify</string>
    <string name="hint_server_name">Server Name</string>
    <string name="hint_server_address">Server Address. ex: smb://192.168.1.1/example</string>
    <string name="hint_server_port">"Server Port "</string>
    <string name="hint_server_auth">Account Name</string>
    <string name="hint_server_password">Password</string>
    <string name="hint_server_password_re">Password Confirm</string>
    <string name="smb_connect_failed">Samba connection failed. Please check your config. You must use WiFi as samba connection. </string>
    <string name="smb_connect_success">Connection Success.</string>
    <string name="menu_add_in">Add</string>
    <string name="buffering">Buffering...</string>
    <string name="smb_connect_error">Error connection. Please check your network .</string>
    <string name="browse_genres">Genres</string>
    <string name="browse_genre_subtitle">Songs by genre</string>
    <string name="browse_musics_by_genre_subtitle">%1$s songs</string>
    <string name="search_queue_title">Search results</string>
    <string name="random_queue_title">Random music</string>
    <string name="favorite">Favorite</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="cast_application_id">09CBA5D1</string>
    <string name="media_route_menu_title">Play on&#8230;</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>

    <!-- Notificaiton Channel -->
    <string name="notification_channel">UAMP_Channel_ID</string>
    <string name="notification_channel_description">Channel ID for UAMP</string>
</resources>
