<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/serverName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/hint_server_name"/>

    <EditText
        android:id="@+id/serverAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/hint_server_address"/>

    <EditText
        android:id="@+id/serverPort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/hint_server_port"
        android:inputType="numberDecimal"
        android:maxLength="5"/>

    <EditText
        android:id="@+id/serverAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/hint_server_auth"/>

    <EditText
        android:id="@+id/serverPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:inputType="textPassword"
        android:hint="@string/hint_server_password"/>

    <EditText
        android:id="@+id/serverPwdRe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:inputType="textPassword"
        android:hint="@string/hint_server_password_re"/>

</LinearLayout>